<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/gridlayout_edit_fragment"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:columnCount="1"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"

  tools:context="edu.cnm.deepdive.worldofwardrobe.MainActivity$PlaceholderFragment">

  <Spinner
    android:id="@+id/spinner_wardrobe"
    android:background="@drawable/rounded_spinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:ems="10"
    android:text="@string/select_wardrobe"
    android:textAlignment="center"/>
  <Spinner
    android:id="@+id/spinner_type"
    android:background="@drawable/rounded_spinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:ems="10"
    android:text="@string/select_type"
    android:textAlignment="center"/>
  <EditText
    android:id="@+id/edittext_name"
    android:background="@drawable/rounded_edittext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:ems="10"
    android:text="@string/item_name"
    android:textAlignment="center"
    android:textColor="@color/colorAccent"/>
  <EditText
    android:id="@+id/edittext_price"
    android:background="@drawable/rounded_edittext"
    android:layout_width="93dp"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:ems="10"
    android:text="@string/item_price"
    android:textAlignment="center"
    android:textColor="@color/colorAccent"/>

  <EditText
    android:id="@+id/edittext_location"
    android:background="@drawable/rounded_edittext"
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:ems="10"
    android:text="@string/item_location"
    android:textAlignment="center"
    android:textColor="@color/colorAccent"/>

  <ImageButton
    android:id="@+id/button_additem"
    android:background="@color/colorPrimaryDark"
    android:layout_height="44dp"
    android:layout_width="330dp"
    android:src="@drawable/add_item"/>


  <EditText
      android:id="@+id/edittext_wardrobe"
      android:background="@drawable/rounded_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:ems="10"
      android:text="@string/name_new_wardrobe"
      android:textAlignment="center"
      android:textColor="@color/colorAccent"/>

    <Button
      android:id="@+id/button_add_wardrobe"
      android:background="@drawable/rounded_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:ems="10"
      android:text="@string/add_new_wardrobe"
      android:textAlignment="center"
      android:textColor="@color/colorPrimary"/>

    <EditText
      android:id="@+id/edittext_itemtype"
      android:background="@drawable/rounded_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:textColorHighlight="@color/colorCyan"
      android:ems="10"
      android:text="@string/name_new_itemtype"
      android:textAlignment="center"
      android:textColor="@color/colorAccent"/>

    <Button
      android:id="@+id/button_add_itemtype"
      android:background="@drawable/rounded_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:ems="10"
      android:text="@string/add_new_itemtype"
      android:textAlignment="center"
      android:textColor="@color/colorPrimary"/>

  <ImageView
    android:id="@+id/view_photo"
    android:layout_width="100dp"
    android:layout_height="100dp"/>

</GridLayout>
